--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
     <a id="text"></a>
-    <button id="update-btn">click to show url</button>
-    <button id="save">click to save</button>
+    <button id="update-btn">点击会自动寻找并更新书签</button>
     <script src="popup.js"></script>
   </body>
 </html>
